--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -7,7 +7,7 @@ innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
-\subsubsection{Jaktfrekvenser 31\,MHz}
+\subsubsection{Jaktfrekvenser 31 MHz}
 
 Frekvenserna på detta band var tidigare till för enbart jakt. I dag är de öppna för övrig landmobil trafik och kan nyttjas till fritidskommunikation av annat slag.
 
@@ -49,7 +49,7 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 \input{tex/pr-bandet-69mhz}
 
 
-\subsubsection{Jakt och jordbruksfrekvenser 155\,MHz}
+\subsubsection{Jakt och jordbruksfrekvenser 155 MHz}
 
 Observera att kanalnumren som är traditionella och frekvenserna inte kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har särskilda restriktioner på svenskt innanvatten och territorialvatten.
 
@@ -76,7 +76,7 @@ Observera att kanalnumren som är traditionella och frekvenserna inte kommer hel
 \end{itemize}
 \normalsize
 
-\subsubsection{Öppna PMR-bandet på 446\,MHz}
+\subsubsection{Öppna PMR-bandet på 446 MHz}
 
 I nya författningssamlingen står det uttryckligen att repeateranvändning är 
 förbjuden. De exakta kanalerna har också inte heller bestämts utan bandet är 
