--- a/tex/body.tex
+++ b/tex/body.tex
@@ -98,7 +98,7 @@ Sverige delas in i följande distrikt efter sina län:
 
 \begin{figure}
 	\centering
-	\includegraphics[width=15cm]{pic/sm-distrikt-stor}
+	\includegraphics[width=12cm]{pic/sm-distrikt-stor}
 	\label{fig:sm-distrikt}
 	\caption{Svenska distrikt, karta med tillståpnd från \href{https://SSA.SE}{ssa.se}}
 \end{figure}
@@ -547,7 +547,7 @@ Generellt för dessa är att sista siffran i CTCSS-frekvensen är samma som dist
 
 Benämningarna HF, MF och LF har också andra betydelser. Exempelvis an\-vänd\-s HF som beteckning av den signal en antenn tar mot eller sänder oavsett frekvensband, MF kan vara mellansignalen oavsett frekvens efter omvandling i en superheterodynmottagare och LF, ibland benämnt AF (audiofrekvens) är det hörbara ljudet, dvs den modulation som används på signalen.
 
-På engelska används i stället benämningarna RF för radio frequency, IF för intermediate frequency and AF för audio frequency vilket rekommenderas då sammanblandningsrisk med ITU-benämningarna på spektrum inte föreligger.
+På engelska används i stället be\-nämn\-ing\-ar\-na RF för radio frequency, IF för intermediate frequency and AF för audio frequency vilket rekommenderas då sammanblandningsrisk med ITU-be\-nämn\-ing\-ar\-na på spektrum inte föreligger.
 
 Amatörradioband finns inom de flesta av dessa frekvensband utom de högsta och lägsta frekvenserna.
 
