--- a/tex/init-1st.tex
+++ b/tex/init-1st.tex
@@ -39,4 +39,6 @@
 \setlist{nosep}                        % Separera inte numrerade och punktlistor mer
 \usepackage{todonotes}                 % Kunna lägga in att-göra i dokumentet
 \renewcommand{\arraystretch}{1.15}
+\headheight=20pt
+
 
