--- a/tex/rhb-forord.tex
+++ b/tex/rhb-forord.tex
@@ -1,5 +1,5 @@
 \begin{document}
-	
+
 \newgeometry{left=2cm,right=2cm,bottom=1cm,top=1cm}
 \pagestyle{empty}
 \vfill
@@ -101,7 +101,7 @@ senaste version i PDF att ladda ner direkt.
 
 \href{https://sikvall.se}{https://sikvall.se/}
 
-Och kör radio där ute. Mobilt. Stabilt. Maritimt. Aeromobilt. Alltid med stil.\\[4em]
+Och kör radio där ute. Alltid med stil.\\[4em]
 
 Karlholm, \DokumentDatum\\
 \textit{Täpp-Anders Sikvall\\
