Fixat några hboxar

--- a/tex/bandplan-hf.tex
+++ b/tex/bandplan-hf.tex
@@ -133,6 +133,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & SSB QRP 24\,950, DV 24,960                            \\ \hline
 \end{tabular}
 
+\small
 \subsubsection{Bandplan 10\,m, 28\,000-29\,700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
@@ -156,5 +157,6 @@ Alla frekvenser i kHz, bandbredder i Hz.
 29\,620 & 29\,700 & 6000 & Alla moder & FM Repeater ut RH1--8, 100\,kHz duplex                 \\ \hline
 \end{tabular}
 %\end{landscape}
+\normalsize
 
 \clearpage
