--- a/tex/body.tex
+++ b/tex/body.tex
@@ -291,12 +291,10 @@ Nödtrafik har alltid prioritet.
 
 \section{Teknik}
 
-\input{tex/amatorradiocertifikat}
-
 \subsection{Effekt i dBW och dBm}
 
 Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat 1W (dBW). Tabell över effekt och decibelwatt nedan:
-\begin{table}[h]
+\begin{table}[H]
 \centering
 \begin{tabular}{rrr|rrr|rrr}
 	\textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} & \textbf{Effekt} & \textbf{dBW} & \textbf{dBm} \\ \hline
@@ -316,7 +314,7 @@ Signalstyrkan i amatörradio uttrycks oftast som S-värden. Dessa fås i regel g
 
 Standard kalibrering för S-metern är enligt skalan i tabellen \ref{tab:s-varden}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \begin{tabular}{r|rr|rr||r|rr|rr}
       & \multicolumn{2}{c|}{\textbf{$<$ 30 MHz}} &
@@ -679,7 +677,7 @@ Eftersom signalerna kan passera jonosfären fungerar det att kommunicera med sat
 
 \subsubsection{Ultrahög frekvens (UHF)}
 
-Bandet är ett av de mest populära för landmobil radio. I dag rymms i detta band mellan 300--3000\,MHz näranog all landmobil professionell kommunikation då mycket har lämnat VHF-bandet till förmån för 400\,MHz-bandet. I skrivande stund ryms även alla mobiltelefoniband inom UHF, det gäller 700, 800, 900, 1800, 2100 och 2600. I framtiden kan det komma frekvensband som ligger högre, exempelvis 3,5\,GHz eller 5\,GHz.
+Bandet är ett av de mest populära för landmobil radio. I dag rymms i detta band mellan 300--3000\- \,MHz nära nog all landmobil professionell kommunikation då mycket har lämnat VHF-bandet till förmån för 400\,MHz-bandet. I skrivande stund ryms även alla mobiltelefoniband inom UHF, det gäller 700, 800, 900, 1800, 2100 och 2600. I framtiden kan det komma frekvensband som ligger högre, exempelvis 3,5\,GHz eller 5\,GHz.
 
 Bandet är utmärkt för kommunikation mellan fordon, särskilt i urban miljö fungerar den kortare våglängden bra. Den reflekteras också bättre mellan husen och frekvenser på främst 400\,MHz har en fantastisk förmåga att leta sig in fast man befinner sig i radioskugga. Tillsammans med 6-meter, 4-meter och 2-meter i glesbygden fyller 70\,cm-bandet en nisch för landmobil kommunikation som få andra frekvenser fungerar.
 
