--- a/tex/pr-bandet-69mhz.tex
+++ b/tex/pr-bandet-69mhz.tex
@@ -31,7 +31,7 @@ kommunikation bas-bas egentligen tillåten eftersom det är landmobil trafik som
 avses i PTS bestämmelser. Kanal 1 får enbart användas för mobil-mobil trafik
 inom Västra Götaland och Hallands län.
 
-\begin{table}[h]
+\begin{table}[ht]
   \centering
 \begin{tabular}{rrl}
   Kanal & Frekvens & Noteringar                         \\ \hline
