--- a/tex/rhb-forord.tex
+++ b/tex/rhb-forord.tex
@@ -101,7 +101,9 @@ senaste version i PDF att ladda ner direkt.
 
 \href{https://sikvall.se}{https://sikvall.se/}
 
-Och kör radio där ute. Alltid med stil.\\[4em]
+Och kör radio där ute. Alltid med stil.
+
+\vspace{4mm}
 
 Karlholm, \DokumentDatum\\
 \textit{Täpp-Anders Sikvall\\
