--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -302,15 +302,15 @@ att ange kanal.
 
 Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
 
-\begin{tabular}{crrll}
-	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
+\begin{tabular}{crrlll}
+	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Std repeaterskifte} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
 
-6\,m   & 51.000\,MHz  & 10.0\,kHz & F00  & $f=51+k\cdot0.01$    \\
-      &             &          &      & $k=(f-51)/0,01$      \\ \hline
-2\,m   & 145.000\,MHz & 12.5\,kHz & V00  & $f=145+k\cdot0.0125$ \\
-      &             &          &      & $k=(f-145)/0,0125$   \\ \hline
-70\,cm & 430.000\,MHz & 12.5\,kHz & U000 & $f=430+k\cdot0.0125$ \\
-      &             &          &      & $k=(f-430)/0,0125$   \\ \hline
+	6\,m &	51.000\,MHz & 10.0\,kHz & -100\,kHz & F00  & $f=51+k\cdot0.01$    \\
+		&	&	&	&	& $k=(f-51)/0,01$      \\ \hline
+2\,m   & 145.000\,MHz & 12.5\,kHz & -600\,kHz & V00  & $f=145+k\cdot0.0125$ \\
+	  &             &          &      &      & $k=(f-145)/0,0125$   \\ \hline
+70\,cm & 430.000\,MHz & 12.5\,kHz & -2000\,kHz & U000 & $f=430+k\cdot0.0125$ \\
+	  &             &          &      &      & $k=(f-430)/0,0125$   \\ \hline
 \end{tabular}
 
 Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det kanaler i numreringen som inte är tillåtna på vissa ställen. Det är därför viktig att kontrollera att man fortfarande följer bandplanerna i den region man är.
