Fixat en felstavning

--- a/tex/body.tex
+++ b/tex/body.tex
@@ -100,7 +100,7 @@ Sverige delas in i följande distrikt efter sina län:
 	\centering
 	\includegraphics[width=12cm]{pic/sm-distrikt-stor}
 	\label{fig:sm-distrikt}
-	\caption{Svenska distrikt, karta med tillståpnd från \href{https://SSA.SE}{ssa.se}}
+	\caption{Svenska distrikt, karta med tillstånd från \href{https://SSA.SE}{ssa.se}}
 \end{figure}
 
 Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer 
