Uppstädning body-vhf.tex

--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -2,21 +2,33 @@
 
 \subsection{Frekvenser ej amatörradio}
 
-Dessa frekvenser är avsedda för allmänhet eller för specifika ända\-mål som anges. Det innebär att de kan brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej tillståndspliktiga frekvenser. Observera att du är skyldig att själv kontrollera bestämmelserna
-innan en frekvens brukas.
+Dessa frekvenser är avsedda för allmänhet eller för specifika
+ända\-mål som anges. Det innebär att de kan brukas för de ändamål som
+anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över
+ej tillståndspliktiga frekvenser. Observera att du är skyldig att
+själv kontrollera bestämmelserna innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
 \subsubsection{Jaktfrekvenser 31 MHz}
 
-Frekvenserna på detta band var tidigare till för enbart jakt. I dag är de öppna för övrig landmobil trafik och kan nyttjas till fritidskommunikation av annat slag.
+Frekvenserna på detta band var tidigare till för enbart jakt. I dag är
+de öppna för övrig landmobil trafik och kan nyttjas till
+fritidskommunikation av annat slag.
 
-Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket betyder att under en timme får man sända maximalt 6 minuter. 
+Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket
+betyder att under en timme får man sända maximalt 6 minuter.
 
-I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya kanaler vilket skedde i oktober 2012. De har ingen officiell kanalnumrering eller egentlig benämning men jag har valt att numrera upp dem efter de traditionella numren med början på 25.
+I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya
+kanaler vilket skedde i oktober 2012. De har ingen officiell
+kanalnumrering eller egentlig benämning men jag har valt att numrera
+upp dem efter de traditionella numren med början på 25.
 
-Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk, så det vore förvirrande att använda den -- den saknas därför i listan. 
-Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal 25 och uppåt efter frekvens. Detta gör att listan blir en smula oordnad.
+Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk,
+så det vore förvirrande att använda den -- den saknas därför i listan.
+Nya kanaler är markerade i listan med asterisk och har fått nummer
+från kanal 25 och uppåt efter frekvens. Detta gör att listan blir en
+smula oordnad.
 
 \begin{longtable}{rll|rll}
 	\caption{Jaktfrekvenser 31\,MHz tabell}\\
@@ -51,7 +63,9 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 
 \subsubsection{Jakt och jordbruksfrekvenser 155 MHz}
 
-Observera att kanalnumren som är traditionella och frekvenserna inte kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har särskilda restriktioner på svenskt innanvatten och territorialvatten.
+Observera att kanalnumren som är traditionella och frekvenserna inte
+kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har
+särskilda restriktioner på svenskt innanvatten och territorialvatten.
 
 \begin{table}[H]
 \centering
@@ -72,23 +86,35 @@ Observera att kanalnumren som är traditionella och frekvenserna inte kommer hel
 \begin{itemize}
 	\item[$^M$] Delas med marina VHF-bandet, kanalerna L1 och L2 för fritidsbåtar.
 	\item[$^P$] PMR-kanal som kan användas till allmän privatradio.
-	\item[$^R$] Dessa kanaler \textit{får ej användas} på svenskt territorialvatten eller svenskt inre vatten. Se \href{https://pts.se/globalassets/startpage/dokument/legala-dokument/foreskrifter/radio/beslutade_ptsfs-2018-3-undantagsforeskrifter.pdf}{PTSFS2018:3} för mer information.
+	\item[$^R$] Dessa kanaler \textit{får ej användas} på svenskt
+          territorialvatten eller svenskt inre vatten. Se
+          \href{https://pts.se/globalassets/startpage/dokument/legala-dokument/foreskrifter/radio/beslutade_ptsfs-2018-3-undantagsforeskrifter.pdf}{PTSFS2018:3}
+          för mer information.
 \end{itemize}
 \normalsize
 
 \subsubsection{Öppna PMR-bandet på 446 MHz}
 
-I nya författningssamlingen står det uttryckligen att repeateranvändning är 
-förbjuden. De exakta kanalerna har också inte heller bestämts utan bandet är 
-upplåtet 446,0--446,2\,MHz. Traditionellt används nedanstående kanaler. Max 
-effekt är 500\,mW och antennen får ej vara av löstagbar sort. Utrustningen 
-skall vara godkänd för ändamålet.
+I nya författningssamlingen står det uttryckligen att
+repeateranvändning är förbjuden. De exakta kanalerna har också inte
+heller bestämts utan bandet är upplåtet
+446,0--446,2\,MHz. Traditionellt används nedanstående kanaler. Max
+effekt är 500\,mW och antennen får ej vara av löstagbar
+sort. Utrustningen skall vara godkänd för ändamålet.
 
-Sedan sist har ytterligare spektrum tillförts och bandet har nu 16 kanaler. Det medges också digital PMR på alla frekvenserna men rekommendationen är att använda K1--K8 för analogt och K9--K16 för digitalt eftersom äldre apparater inte kan gå på de nya kanalerna medan alla digitala kan det.
+Sedan sist har ytterligare spektrum tillförts och bandet har nu 16
+kanaler. Det medges också digital PMR på alla frekvenserna men
+rekommendationen är att använda K1--K8 för analogt och K9--K16 för
+digitalt eftersom äldre apparater inte kan gå på de nya kanalerna
+medan alla digitala kan det.
 
-Vi vissa numreringar numreras de digitala kanalerna med start på kanalnummer 1 på K9. I listan står de som D1--D8 där D står för digitalt.
+Vi vissa numreringar numreras de digitala kanalerna med start på
+kanalnummer 1 på K9. I listan står de som D1--D8 där D står för
+digitalt.
 
-Endast smalbandig modulation med FM-deviation max 2.5 kHz skall användas för att inte störa närliggande kanaler. Kanalrastret är 12,5\,kHz så modulationen bör rymmas inom den bandbredden.
+Endast smalbandig modulation med FM-deviation max 2.5 kHz skall
+användas för att inte störa närliggande kanaler. Kanalrastret är
+12,5\,kHz så modulationen bör rymmas inom den bandbredden.
  
 \begin{table}[H]
 \centering
@@ -110,8 +136,10 @@ Endast smalbandig modulation med FM-deviation max 2.5 kHz skall användas för a
 
 \subsubsection{Kortdistansradio (KDR, SRBR)}
 
-Kallas även SRBR för Short Range Business Radio. 
-Den traditionella frekvenslistan ser ut som följer. En ny variant med frekvenser för 12,5\,kHz samt 6,25\,kHz kanaler finns också ute nu och kan ses i tabell \ref{tab:SRBR-frekvenser}.
+Kallas även SRBR för Short Range Business Radio.  Den traditionella
+frekvenslistan ser ut som följer. En ny variant med frekvenser för
+12,5\,kHz samt 6,25\,kHz kanaler finns också ute nu och kan ses i
+tabell \ref{tab:SRBR-frekvenser}.
 
 \begin{table}[h]
 	\centering
@@ -129,11 +157,16 @@ Den traditionella frekvenslistan ser ut som följer. En ny variant med frekvense
 \caption{Frekvenser för SRBR}
 \end{table}	
 
-SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmässig radiotrafik.
+SRBR är ett ej tillståndspliktigt frekvenssegment som används för
+yrkesmässig radiotrafik.
 
-Rekommendationen är att man skall använda CTCSS eller motsvarande för att undvika störa och bli störd av andra stationer som delar frekvenserna.
+Rekommendationen är att man skall använda CTCSS eller motsvarande för
+att undvika störa och bli störd av andra stationer som delar
+frekvenserna.
 
-Från PTSFS2018:3 så har bandet fått nya bärvågsfrekvenser och det har blivit öppet för att köra med 25, 12,5 eller 6,25\,kHz Kanalraster. Denna frekvenstabell blir lite mer komplicerad.
+Från PTSFS2018:3 så har bandet fått nya bärvågsfrekvenser och det har
+blivit öppet för att köra med 25, 12,5 eller 6,25\,kHz
+Kanalraster. Denna frekvenstabell blir lite mer komplicerad.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
@@ -171,7 +204,13 @@ Från PTSFS2018:3 så har bandet fått nya bärvågsfrekvenser och det har blivi
 
 \subsection{Maritima VHF-frekvenser}
 
-Marinbandet på VHF består både av duplex- och simplexkanaler. Simplexkanalerna används skepp-till-skepp och även ibland mot kustradio. Duplexfrekvenserna används t.ex. vid telefonsamtal som sätts upp av kuststation till skepp eller liknande. På dessa arbetskanaler sänder man även ut sjörapporter, navigationsvarningar och annan information t.ex. säkerhetsvarningar som är viktiga för sjöfarten.
+Marinbandet på VHF består både av duplex- och
+simplexkanaler. Simplexkanalerna används skepp-till-skepp och även
+ibland mot kustradio. Duplexfrekvenserna används t.ex. vid
+telefonsamtal som sätts upp av kuststation till skepp eller
+liknande. På dessa arbetskanaler sänder man även ut sjörapporter,
+navigationsvarningar och annan information t.ex. säkerhetsvarningar
+som är viktiga för sjöfarten.
 
 \subsubsection{Kanalnummer och frekvens maritima kanaler}
 
@@ -216,17 +255,28 @@ L2 & 155,525 & Leisure        & F2 & 155,775 &Fishing \\
 \caption{Marin VHF, frekvenslista}
 \end{table}
 
-I tabellen listas de kanaler som gäller i svenska farvatten. Andra länder kan ha andra kanaler eller för olika ändamål. Det krävs en särskild licens från PTS för att få nyttja dessa frekvenser och radiooperatören skall ha ett SRC-certifikat (Short Range Communication).
+I tabellen listas de kanaler som gäller i svenska farvatten. Andra
+länder kan ha andra kanaler eller för olika ändamål. Det krävs en
+särskild licens från PTS för att få nyttja dessa frekvenser och
+radiooperatören skall ha ett SRC-certifikat (Short Range
+Communication).
 
 Anropskanal och nödkanal är kanal 16.
 
 Vid duplextrafik är skiftet -4,6\,MHz.
 
-I tabellen är kanaler som saknar kustfrekvens alltså simplexkanaler. DSC står för ''Digital Selective Call'' ett sätt att digitalt anropa skepp eller kuststationer, kanaler vikta för DSC får inte användas för vanliga samtal.
+I tabellen är kanaler som saknar kustfrekvens alltså
+simplexkanaler. DSC står för ''Digital Selective Call'' ett sätt att
+digitalt anropa skepp eller kuststationer, kanaler vikta för DSC får
+inte användas för vanliga samtal.
 
-Kanal 16 är anropsfrekvens om man inte vet motstationen passar en annan kanal. Den är också nödfrekvens eftersom den passas av de flesta. 
+Kanal 16 är anropsfrekvens om man inte vet motstationen passar en
+annan kanal. Den är också nödfrekvens eftersom den passas av de
+flesta.
 
-Kanalerna L1--L2 är frekvenser avsedda för fritidsbåtar (Leisure) och frekvenserna F1--F3 osv är avsedda för yrkesfiske. L1 och L2 delas med kanal 3 och 4 på jaktradion vilket kan vara bra att känna till.
+Kanalerna L1--L2 är frekvenser avsedda för fritidsbåtar (Leisure) och
+frekvenserna F1--F3 osv är avsedda för yrkesfiske. L1 och L2 delas med
+kanal 3 och 4 på jaktradion vilket kan vara bra att känna till.
 
 \subsubsection{Transponderkanaler}
 \begin{longtable}{rrl}
@@ -293,17 +343,26 @@ Motala    & 26 & 47 &             &    &    \\
 
 \subsection{Frekvenser amatörradio VHF--UHF}
 
-I denna skrift försöker vi omfatta de viktigaste VHF och UHF-banden för amatörradio vilket inkluderar 6\,m-bandet, 2\,m-bandet, 70\,cm-bandet och 23\,cm-bandet.
+I denna skrift försöker vi omfatta de viktigaste VHF och UHF-banden
+för amatörradio vilket inkluderar 6\,m-bandet, 2\,m-bandet,
+70\,cm-bandet och 23\,cm-bandet.
 
 \subsubsection{Kanalnumrering VHF/UHF}
 
-Denna typ av kanalnumrering är överenskommen inom IARU region 1 för 6\,m, 2\,m och 70\,cm banden på amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger vilket band och här används F--6\,m, V--2\,m, U--70\,cm. Därefter används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet för
-att ange kanal.
+Denna typ av kanalnumrering är överenskommen inom IARU region 1 för
+6\,m, 2\,m och 70\,cm banden på
+amatörradiofrekvenser. Kanalnumreringen består av ett prefix som anger
+vilket band och här används F--6\,m, V--2\,m, U--70\,cm. Därefter
+används 2 siffror på 6m och 2m banden och tre siffror på 70cm bandet
+för att ange kanal.
 
-Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då normalt duplex med det skift som normalt används för bandet. Vid repeatrar är det repeaterns utfrekvens som anges, dvs den som mobilstationen lyssnar på. Exempel: RV48.
+Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär
+då normalt duplex med det skift som normalt används för bandet. Vid
+repeatrar är det repeaterns utfrekvens som anges, dvs den som
+mobilstationen lyssnar på. Exempel: RV48.
 
 \begin{tabular}{crrlll}
-	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Std repeaterskifte} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
+	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Duplexskift} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
 
 	6\,m &	51.000\,MHz & 10.0\,kHz & -100\,kHz & F00  & $f=51+k\cdot0.01$    \\
 		&	&	&	&	& $k=(f-51)/0,01$      \\ \hline
@@ -313,19 +372,33 @@ Repeaterfrekvenser anges med tillägget R före kanalnumret och innebär då nor
 	  &             &          &      &      & $k=(f-430)/0,0125$   \\ \hline
 \end{tabular}
 
-Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det kanaler i numreringen som inte är tillåtna på vissa ställen. Det är därför viktig att kontrollera att man fortfarande följer bandplanerna i den region man är.
+Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer
+det kanaler i numreringen som inte är tillåtna på vissa ställen. Det
+är därför viktig att kontrollera att man fortfarande följer
+bandplanerna i den region man är.
 
 \begin{itemize}
 \item I 6\,m bandet finns inga FM-kanaler definierade under 51\,MHz.
 \item För 2\,m-bandet är FM-kanaler endast definierade från 145\,MHz och uppåt.
-\item I 70\,cm-bandet är inga kanaler definierade i intervallet 432.000--433.000\,MHz. Observera att startfrekvensen är utanför 70\,cm bandplanen i IARU region 1.
+\item I 70\,cm-bandet är inga kanaler definierade i intervallet
+  432.000--433.000\,MHz. Observera att startfrekvensen är utanför
+  70\,cm bandplanen i IARU region 1.
 \end{itemize}
 
-\textit{OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt information.}
+\textit{OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas
+  tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt
+  information.}
 
 \subsubsection{Införande av 12.5~kHz kanalavstånd}
 
-För ett antal år sedan beslutade man sig att gå mot ett smalare kanalraster på VHF och UHF och införde härmed kanalavstånd på 12.5~kHz i bandplanerna. Ustrustning med 25~kHz kanalraster är fortsatt tillåten och detta är en rekommendation. Vid införandet av detta så kom även ett nytt numreringsalternativ för kanalsystemen baserat på en basfrekvens (som ibland på svenska band ligger utanför vårt band) och därefter numrerade man i ordning för respektive 12.5~kHz steg och 10~kHz för kortvåg.
+För ett antal år sedan beslutade man sig att gå mot ett smalare
+kanalraster på VHF och UHF och införde härmed kanalavstånd på 12.5~kHz
+i bandplanerna. Ustrustning med 25~kHz kanalraster är fortsatt
+tillåten och detta är en rekommendation. Vid införandet av detta så
+kom även ett nytt numreringsalternativ för kanalsystemen baserat på en
+basfrekvens (som ibland på svenska band ligger utanför vårt band) och
+därefter numrerade man i ordning för respektive 12.5~kHz steg och
+10~kHz för kortvåg.
 
 \begin{table}[h]
 \centering
@@ -408,7 +481,12 @@ M & 1240,000 & 25 & -6000 \\
          &     &              & 145,7875 & RV63 & R7X
 \end{longtable}
 
-X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5\,kHz kanaldelning för repeatrar. Först senare övergick man även till samma kanaldelning på övriga FM-kanaler. De gamla simplexkanalerna hade inte så stor spridning i Sverige men förekom rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller aktivitetscenter som det numera kallas).
+X-kanalerna uppstod när man fick platsbrist och man övergick till en
+12.5\,kHz kanaldelning för repeatrar. Först senare övergick man även
+till samma kanaldelning på övriga FM-kanaler. De gamla
+simplexkanalerna hade inte så stor spridning i Sverige men förekom
+rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller
+aktivitetscenter som det numera kallas).
 
 \clearpage
 \subsubsection{FM-kanaler 70cm-bandet}
@@ -470,13 +548,23 @@ X-kanalerna uppstod när man fick platsbrist och man övergick till en 12.5\,kHz
 
 \end{longtable}
 
-RU0X osv är här en efterkonstruktion. Egentligen så användes sällan ``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla antalet frekvenser för repeatrar och sedan gammalt ville man egentligen inte ha ett smalare kanalraster, i tidernas begynnelse körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000 \cdot 3 = 432,000$\,MHz och $144,025 \cdot 3 = 432,075$\,MHz varför man till och med hade bredare kanalraster de-facto.
+RU0X osv är här en efterkonstruktion. Egentligen så användes sällan
+``X-frekvenserna'' på 70cm eftersom man dels hade nästan dubbla
+antalet frekvenser för repeatrar och sedan gammalt ville man
+egentligen inte ha ett smalare kanalraster, i tidernas begynnelse
+körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000
+\cdot 3 = 432,000$\,MHz och $144,025 \cdot 3 = 432,075$\,MHz varför
+man till och med hade bredare kanalraster de-facto.
 
 
 \subsection{Scouters frekvenser, JOTA}
 
-Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA}, förekommer några gånger per år. Här är en sammanställning av de standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp motstationer själva. Scouter kan antingen ha egna signaler, köra under
-tillfälliga signaler eller vara second operator åt med någon klubbsignal.
+Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The
+  Air, JOTA}, förekommer några gånger per år. Här är en
+sammanställning av de standardfrekvenser scouter nyttjar om de inte
+kör repeatrar eller leta upp motstationer själva. Scouter kan antingen
+ha egna signaler, köra under tillfälliga signaler eller vara second
+operator åt med någon klubbsignal.
 
 \subsection{Nordiska scoutfrekvenser VHF}
 
@@ -489,15 +577,19 @@ tillfälliga signaler eller vara second operator åt med någon klubbsignal.
 \end{tabular}
 \end{center}
 
-Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år. Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar på söndagseftermiddagen.
+Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober
+varje år. Jotan startar officiellt vid invigningen på lördag förmiddag
+och slutar natten till måndagen klockan 00:00. Många börjar redan på
+fredagskvällen och avslutar på söndagseftermiddagen.
 
-Sändningar under denna tid förekommer från ocertifierade scouter som lånar 
-klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda 
-sändaramatörer ut sina signaler. 
+Sändningar under denna tid förekommer från ocertifierade scouter som
+lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar
+enskilda sändaramatörer ut sina signaler.
 
-Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör 
-men var beredd på att det kommer vara en viss ovana och ske en del misstag. 
-Strunta i det och ge scouterna en kul radioupplevelse.
+Sändningarna skall dock alltid ske under direkt överinseende av en
+radioamatör men var beredd på att det kommer vara en viss ovana och
+ske en del misstag.  Strunta i det och ge scouterna en kul
+radioupplevelse.
 
 \input{tex/radioberakningar-vhf.tex}
 
