--- a/tex/body-hf.tex
+++ b/tex/body-hf.tex
@@ -3,7 +3,8 @@
 \section{Trafik- och tumregler HF}
 \subsection{Kort sammanfattning av reglemente}
 
-OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast sammanfattning av några viktiga punkter.
+OBS! Detta är inte fullständigt radioreglemente naturligtvis utan
+endast sammanfattning av några viktiga punkter.
 
 \subsubsection{Begrepp i bandplanerna}
 
@@ -18,13 +19,29 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 \subsubsection{Trafikregler och tumregler}
 
 \begin{itemize}
-\item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB på frekvenser över 10 MHz.
-\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över under bandkant! 
-\item Högsta acceptable inställda frekvens för USB är 3 kHz under övre bandkant!
-\item IBP är International Beacon Project. Fyrarna sänder med 3 min intervaller och används för att studera utbredningen av radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner. Anropet och första tonen sänds med 100W, därefter sänds tonerna med 10W, 1W samt 100mW.
-\item Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
-\item Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
-\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10\,m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
+\item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB
+      på frekvenser över 10 MHz.
+\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över
+      under bandkant!
+\item Högsta acceptable inställda frekvens för USB är 3 kHz under
+      övre bandkant!
+\item IBP är International Beacon Project. Fyrarna sänder med 3 min
+      intervaller och används för att studera utbredningen av
+      radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner.
+      Anropet och första tonen sänds med 100W, därefter sänds tonerna
+      med 10W, 1W samt 100mW.
+\item Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer
+      med de sidband som då uppstår, det gäller då både övre och undre
+      sidbandet.
+\item Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras.
+      Lyssna gärna på nödfrekvenserna men används dem icke, om det
+      inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära
+      dessa också.
+\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10\,m-bandet.
+      I detta segment skall endast lyssning ske. Ingen sändning är
+      tillåten här eller i skyddssegmentet strax ovanför
+      satellitsegmentet. Tänk på att satelliters frekvens kan
+      dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
 \end{itemize}
 
 \section{Frekvenser HF}
@@ -33,7 +50,11 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 
 \subsection{JOTA---Jamboree on the air, scoutfrekvenser}
 
-Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga amtörradioeldsjälar som inte sällan också är scouter. Här kommer en lista på frekvenser som är vanligt förekommande i scoutsammanhang.
+Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid
+särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb
+eller vanliga amtörradioeldsjälar som inte sällan också är
+scouter. Här kommer en lista på frekvenser som är vanligt förekommande
+i scoutsammanhang.
 
 \begin{table}[H]
 \centering
@@ -62,13 +83,22 @@ Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särski
 \caption{Scouters JOTA-frekvenser på HF}
 \end{table}
 
-Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år, fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna och det är också vanligt att man hör dem på helt andra frekvenser. De frekvenser som listas här är inte på något vis de enda frekvenser som scouter använder.
+Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje
+år, fredag till söndag. Då kan det vara många klubbar som finns på
+frekvenserna och det är också vanligt att man hör dem på helt andra
+frekvenser. De frekvenser som listas här är inte på något vis de enda
+frekvenser som scouter använder.
 
 \subsection{Marina MF/HF-frekvenser}
 
-De marina HF-banden är uppdelade på ett antal band. Det finns en generell kanalindelning med 3 kHz per kanal och SSB som modulationssätt på respektive band. Marina HF-kanaler finns på banden 4, 6, 8, 12, 16, 18, 22 och 25 MHz. 
+De marina HF-banden är uppdelade på ett antal band. Det finns en
+generell kanalindelning med 3 kHz per kanal och SSB som
+modulationssätt på respektive band. Marina HF-kanaler finns på banden
+4, 6, 8, 12, 16, 18, 22 och 25 MHz.
 
-MF även benämnd gränsvåg i marina sammanahang är inte lika ofta används som den var en gång i tiden. Nedan listas de frekvenser som används i Sverige.
+MF även benämnd gränsvåg i marina sammanahang är inte lika ofta
+används som den var en gång i tiden. Nedan listas de frekvenser som
+används i Sverige.
 
 \subsubsection{Svenska MF-kanaler}
 
@@ -100,7 +130,9 @@ HF16 & 16 429 & 16 804.5 \\
 \subsubsection{Primära HF skepp-till-skepp}
 
 \begin{longtable}{lrrrrrrrr}
-\textbf{Kanal} & \textbf{HF4} & \textbf{HF6} & \textbf{HF8} & \textbf{HF12} & \textbf{HF16} & \textbf{HF18} & \textbf{HF22} & \textbf{HF25} \\
+\textbf{Kanal} & \textbf{HF4} & \textbf{HF6} & \textbf{HF8} &
+               \textbf{HF12} & \textbf{HF16} & \textbf{HF18} &
+               \textbf{HF22} & \textbf{HF25} \\
 \hline
 \endhead
 
@@ -119,15 +151,22 @@ G &       &       &       &        & 16 546 & 18 843 & 22 177 & 25 118 \\
 
 \subsubsection{IBP -- International Beacon Project}
 
-Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra.
+Det finns flera olika typer av fyrar men för HF är IBP (International
+Beacon Project) intressant eftersom det ger operatören möjlighet att
+utröna hur utbredningen ser ut för stunden genom att lyssna efter
+fyrar. Fyrarna har gemensam hårdvara och synkroniseras mot
+tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot
+IBP:s hemsida om du inte hör en fyr du brukar höra.
 
-Tabellen nedan visar anropssignaler och första sändningsslotten som fyren sänder, dvs SCHED för olika fyrar och frekvenser.
+Tabellen nedan visar anropssignaler och första sändningsslotten som
+fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 
 \subsubsection{Lista över IBP-fyrar}
 \begin{table}[H]
 \centering
 \begin{tabular}{llrrrrr}
-\textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} & \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
+\textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} &
+                \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
 
 4U1UN  & United Nations & 00:00  & 00:10  & 00:20  & 00:30  & 00:40  \\ 
 VE8AT  & Canada         & 00:10  & 00:20  & 00:30  & 00:40  & 00:50  \\
