Omflödat diverse text Påbärjat beskrivningar av HF-bandens egenskaper för amatörradio

--- a/tex/body-hf.tex
+++ b/tex/body-hf.tex
@@ -48,13 +48,45 @@ endast sammanfattning av några viktiga punkter.
 
 \input{tex/pr-bandet-27mhz.tex}
 
+\subsection{Amatörradiofrekvenser HF}
+
+\todo{Beskriva bandegenskaperna}
+
+\subsubsection{Bandens olika egenskaper}
+
+Även om man kan säga att alla kortvågsbanden har liknande egenskaper så är
+skillnaderna bland dem ofta påtagliga och eftersom det spänner över ett relativt
+stor område då 160 till 6 meter brukar räknas som HF även om det strikt räknat
+är VHF liksom 160 metersbandet som egentligen faller inom mellanvågsdelen eller
+den så kallade gränsvågen så är de band som oftast förekommer på radiotapparater
+för kortvåg så därför är de med här.
+
+\subsubsection{160 \& 80 metersbanden}
+
+\todo{- 160 och 80 meter}
+
+\subsubsection{40 metersbandet}
+
+\todo{- 40 meter}
+
+\subsubsection{20 \& 17 metersbanden}
+
+\todo{- 20 och 17 meter}
+
+\subsubsection{15 \& 12 metersbanden}
+
+\todo{- 15 och 12 meter}
+
+\subsubsection{6 metersbandet}
+
+\todo{- 6 meter}
+
 \subsection{JOTA---Jamboree on the air, scoutfrekvenser}
 
-Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid
-särskilda tillfällen ofta i tillsammans med en lokal amatörradioklubb
-eller vanliga amtörradioeldsjälar som inte sällan också är
-scouter. Här kommer en lista på frekvenser som är vanligt förekommande
-i scoutsammanhang.
+Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda
+tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga
+amtörradioeldsjälar som inte sällan också är scouter. Här kommer en lista på
+frekvenser som är vanligt förekommande i scoutsammanhang.
 
 \begin{table}[H]
 \centering
@@ -103,7 +135,7 @@ används i Sverige.
 \subsubsection{Svenska MF-kanaler}
 
 \begin{longtable}{llrr}
-\textbf{Kanal} & \textbf{Placering} & \textbf{Skepp} & \textbf{Kust}  \\ \hline 
+\textbf{Kanal} & \textbf{Placering} & \textbf{Skepp} & \textbf{Kust}  \\ \hline
 \endhead
 
 MF1 & Gotland       & 2 099 & 1 6874 \\
@@ -168,7 +200,7 @@ fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 \textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} &
                 \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
 
-4U1UN  & United Nations & 00:00  & 00:10  & 00:20  & 00:30  & 00:40  \\ 
+4U1UN  & United Nations & 00:00  & 00:10  & 00:20  & 00:30  & 00:40  \\
 VE8AT  & Canada         & 00:10  & 00:20  & 00:30  & 00:40  & 00:50  \\
 W6WX   & United States  & 00:20  & 00:30  & 00:40  & 00:50  & 01:00  \\
 KH6RS  & Hawaii         & 00:30  & 00:40  & 00:50  & 01:00  & 01:10  \\
@@ -190,8 +222,8 @@ YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
 \caption{IBP-fyrar}
 \end{table}
 
-\normalsize
 
-\input{tex/egenskaper-hf}
+
+\normalsize
 
 \input{tex/bandplan-hf}
