--- a/tex/init-1st.tex
+++ b/tex/init-1st.tex
@@ -10,13 +10,13 @@
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt,swedish,a4paper]{article}    % De viktigaste inställningarna för dokumentet
-\usepackage[a4paper,bindingoffset=1cm]{geometry} % Särskilda dokumentinställningar 
+\usepackage[a4paper,bindingoffset=1cm]{geometry} % Särskilda dokumentinställningar
 \usepackage[utf8]{inputenc}            % Indata som UTF-8 är väldigt bra för t.ex. svenska
 \usepackage[T1]{fontenc}               % Fontkodning enligt modern standard
 \usepackage[swedish]{babel}            % Svensk avstavning och mycket mer
 \usepackage[colorlinks,linkcolor=black,urlcolor=blue]{hyperref}
                                        % Hyperref möjliggör länkar utanför dokumentet
-\usepackage{enumitem}                  % Enumrering 
+\usepackage{enumitem}                  % Enumrering
 \usepackage{multirow}                  % Tabeller med tabellrader som spänner över mer än en textrad
 \usepackage{amsmath}                   % Utökade matematiska symboler
 \usepackage{tabularx}                  % Tabulering med fler optioner än original
@@ -53,7 +53,11 @@
 \end{flushright}
 
 \vfill
-	
+
+\listoftodos
+
+\vfill
+
 Version: \DokVersion\ \hfill SMØUEI \hfill Datum: \DokumentDatum
 
 \newpage
