--- a/tex/rhb-forord.tex
+++ b/tex/rhb-forord.tex
@@ -1,44 +1,36 @@
 %förord
 \section*{Förord}
-	
-Detta är den uppdaterade utgåvan för november 2023. Det var ett tag
-sedan som jag ägnade mig åt det här alstret och det har kommit in lite
-påpekanden om rättningar och att repeaterlistor med mera varit ganska
-utdaterade. Det är förstås helt riktigt och jag har i skrivande stund
-faktiskt försökt få in den färskaste informationen som finns från SSA.
 
-Mycket har hänt sedan föregående information. Jag har flyttat från
-Stockholm och har numera blivit SM5UEI men hänger fortfarande på
-Kvarnbergets amatörradioklubb på torsdagskvällarna så där är det öppet
-hus dessa dagar från kl. 19:00 när ni alla är välkomna att kika förbi.
+Detta är den uppdaterade utgåvan för november 2023. Det var ett tag sedan som
+jag ägnade mig åt det här alstret och det har kommit in lite påpekanden om
+rättningar och att repeaterlistor med mera varit ganska utdaterade. Det är
+förstås helt riktigt och jag har i skrivande stund faktiskt försökt få in den
+färskaste informationen som finns från SSA.
 
-Ändringar som skett sedan förra utgåvan:
+Mycket har hänt sedan föregående information. Jag har flyttat från Stockholm och
+har numera blivit SM5UEI men hänger fortfarande på Kvarnbergets amatörradioklubb
+på torsdagskvällarna så där är det öppet hus dessa dagar från kl. 19:00 när ni
+alla är välkomna att kika förbi.
 
-\begin{itemize}[]
-	\item Landsprefixdelen har kortats av och delats upp lite enligt 
-	input från SMØMPV.
-	\item Bandplanerna har setts över, bl.a. 60\,m-bandet i HF-delen 
-	har lagts till då det saknades tidigare.
-	\item Repeaterlistan uppdaterad med senaste data från SSA
-	\item Gjort om några exempel-QSO enligt tips från SMØMPV
-	\item En hel hoper med uppsnyggningar och förbättringar här och där.
-\end{itemize}
-
-Bidrag till handboken tas tacksamt mot men jag kommer bedöma ifall
-materialet är lämpligt att ta med.  Hela materialet finns numera också
-på Github om man vill gräva i det och fixa-dona, komma med 
-förbättrings\-förslag och annat kul så finns den på följande länk:
+Bidrag till handboken tas tacksamt mot men jag kommer bedöma ifall materialet
+är lämpligt att ta med.  Hela materialet finns numera också på Github om man
+vill gräva i det och fixa-dona, komma med förbättrings\-förslag och annat kul
+så finns den på följande länk:
 
 \href{https://github.com/sikvall/rhb/}{https://github.com/sikvall/rhb}
 
-Har ni en massa bra förslag på grejer som ni skulle vilja ha med i boken
-så låt mig veta det där, det går också om ni vill arbeta in ändringar direkt
-och skicka mig en s.k. "pull request" så kan jag kika på det. Det går också
-att logga issues om man hittar fel.
+Ett tack till alla som har varit med och påtalat fel och förbättringar i boken
+genom att skicka in sådana påpekanden på GitHub, via mail eller på annat sätt.
+Stort tack för ni hjälper till att påtala fel och ordna förbättringar.
 
-Det går också hitta en massa annat radiorelaterat på min hemsida om ni 
-är intresserade och där kan ni också normalt hitta radiohandboken som 
-senaste version i PDF att ladda ner direkt.
+Har ni en massa bra förslag på grejer som ni skulle vilja ha med i boken så låt
+mig veta det där, det går också om ni vill arbeta in ändringar direkt och skicka
+mig en s.k. "pull request" så kan jag kika på det. Det går också att logga
+issues om man hittar fel.
+
+Det går också hitta en massa annat radiorelaterat på min hemsida om ni är
+intresserade och där kan ni också normalt hitta radiohandboken som senaste
+version i PDF att ladda ner direkt.
 
 \href{https://sikvall.se}{https://sikvall.se/}
 
@@ -54,13 +46,8 @@ Karlholm, \DokumentDatum\\
 
 \section*{Nyheter i denna utgåva}
 
-\subsection*{Instegscertifikat för amatörradio}
-
-Den största nyheten sedan föregående version av radiohandboken är att PTS has nu tagit beslut om instegscertifikat för amatörradio och i denna version av radiohandboken finns det med en del ny information om detta som kan vara intressant för dig som funderar på att ta ett sådant certifikat. Detta har förlagts i en liten egen del i radiohandboken. Se mer i avsnitt \ref{sec:instegscertifikat} där detta beskrivs mer i detalj vad det innebär.
-
-\subsection*{IEEE frekvensbandsbenämningar}
-
-Frekvensbandsbeteckningar enligt IEEE har tillförts i sektion \ref{sec:IEEE-benamningar}.
+\todo{Fyll i vad som ändrats sedan sist}
 
 \clearpage
-	
+
+
