--- a/tex/body-hf.tex
+++ b/tex/body-hf.tex
@@ -3,17 +3,19 @@
 \section{Trafik- och tumregler HF}
 \subsection{Kort sammanfattning av reglemente}
 
-OBS! Detta är inte fullständigt radioreglemente naturligtvis utan
-endast sammanfattning av några viktiga punkter.
+OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast
+sammanfattning av några viktiga punkter.
 
 \subsubsection{Begrepp i bandplanerna}
 
 \begin{itemize}
-\item QRP: Aktivitetscentrum för låg effekt ($<$5W), svaga signaler förekommer, visa hänsyn.
+\item QRP: Aktivitetscentrum för låg effekt ($<$5W), svaga signaler
+      förekommer, visa hänsyn.
 \item QRS: Aktivitetscenter för långsam CW.
 \item QRSS: Extremt långsam CW med dator.
 \item DV: Digital Voice.
-\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade maximala bandbredden.
+\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade
+	  maximala bandbredden.
 \end{itemize}
 
 \subsubsection{Trafikregler och tumregler}
@@ -184,6 +186,7 @@ Tabellen nedan visar anropssignaler och första sändningsslotten som
 fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 
 \subsubsection{Lista över IBP-fyrar}
+
 \begin{table}[H]
 \centering
 \begin{tabular}{llrrrrr}
@@ -214,4 +217,166 @@ YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
 
 \normalsize
 
-\input{tex/bandplan-hf}
+%\begin{landscape}
+\newpage
+\section{Frekvenser Amatörradio LF/MF/HF}
+\subsection{Bandplaner LF/MF/HF}
+Alla frekvenser i kHz, bandbredder i Hz.
+
+\subsubsection{Bandplan 2.2\,km, 135,7--137,8\,kHz}
+\begin{tabular}{rrrll}
+\textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 600\,m, 472--479\,kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 160\,m, 1810--2000\,kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+1810 & 1838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
+1838 & 1840 & 500  & Smalband   & Ej packet på 160m, PSK 1838,150                    \\ \hline
+1840 & 1850 & 2700 & Alla moder & Även digimode. SSB QRP 1843 kHz                    \\ \hline
+1850 & 1900 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
+1900 & 1950 & 2700 & Alla moder & OBS! Max 100 W till ant.                            \\ \hline
+1950 & 2000 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 80\,m, 3500--3800\,kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+3500 & 3510 & 200  & CW             & Exklusivt CW                         \\
+      &       &      &                & Interkontinental DX-trafik har prio  \\ \hline
+3510 & 3580 & 200  & CW             & Exklusivt CW contest 3510-–560       \\
+      &       &      &                & CW QRS 3 555 kHz, CW QRP 3 560       \\ \hline
+3580 & 3600 & 500  & Smalband, Digi & PSK 3580,150                        \\
+      &       &      &                & Automatiska Digimoder 3590--600     \\ \hline
+3600 & 3620 & 2700 & Alla moder     & Digimoder Automatiska Digimoder      \\ \hline
+3600 & 3650 & 2700 & Alla moder     & SSB contest 3600--650               \\
+      &       &      &                & DV 3630                             \\ \hline
+3650 & 3700 & 2700 & Alla moder     & SSB QRP 3690                        \\ \hline
+3700 & 3800 & 2700 & Alla moder     & Contest 3700-–800                   \\
+      &       &      &                & Image 3775                          \\
+      &       &      &                & Region 1 nödfrekvens 3760           \\ \hline
+3775 & 3800 & 2700 & Alla moder     & Interkontinental DX-trafik prioritet \\ \hline
+\end{tabular}
+
+
+\subsubsection{Bandplan 60\,m, 5351\,5--5366,5\,kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+5351\,5 & 5354\,0 &  200 & CW, Digimoder      & OBS! Högsta utstrålad effekt 15 W EIRP\\
+        &         &      &                    & i 60\,m-bandet\\ \hline
+5354\,0 & 5366\,0 & 2700 & Alla sändningsslag & USB rekommenderas för SSB\\ \hline
+5366\,0 & 5366\,5 &   20 & Smalbandsmoder     & För extrema smalbandsmoder,\\
+        &         &      &                    & max 20 Hz bandbredd\\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 40\,m, 7000--7200\,kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+7000 & 7040 & 200  & CW         & Exklusivt CW.                             \\
+     &      &      &            & QRP aktivitetscentrum 7030\,kHz           \\ \hline
+7040 & 7050 & 500  & Smalband   & Digimoder Automatiska inom 7047–-050\,kHz \\ \hline
+7050 & 7060 & 2700 & Alla moder & Digimoder Automatiska inom 7050–-053\,kHz \\ \hline
+7060 & 7100 & 2700 & Alla moder & SSB contest i segmentet                   \\
+     &      &      &            & DV 7 070 kHz, SSB QRP 7090 kHz            \\ \hline
+7100 & 7130 & 2700 & Alla moder & Region 1 nödfrekvens 7110 kHz             \\ \hline
+7130 & 7200 & 2700 & Alla moder & SSB contest i segmentet                   \\
+     &      &      &            & Image 7165\,kHz                           \\ \hline
+7175 & 7200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 30\,m, 10\,100--10\,150 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+10\,100 & 10\,140 & 200 & CW       & CW exkl. Max 150 Watt på 30 m           \\
+        &         &     &          & CW QRP 10\,116\,kHz                     \\ \hline
+10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 20\,m, 14\,000--14\,350 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                             \\
+        &         &      &            & Conctest 14\,000-–060                    \\
+        &         &      &            & CW QRS 14 055, CW QRP 14\,060            \\ \hline
+14\,070 & 14\,099 & 500  & Smalband   & PSK 14 070,150                           \\
+        &         &      &            & Auto Digimoder 14 089-–099               \\ \hline
+14\,099 & 14\,101 & 200  & Fyrar      & Exklusivt IBP, endast fyrar              \\ \hline
+14\,101 & 14 \,12 & 2700 & Alla moder & Digitala moder och obevakade Digimoder   \\ \hline
+14\,112 & 14\,350 & 2700 & Alla moder & SSB Contest 14 125--300                  \\
+        &         &      &            & DV 14 130, DXpedition prio 14\,195$\pm$5 \\ \hline
+14\,300 & 14\,350 & 2700 & Alla moder & Image 14\,230, SSB QRP 14\,285           \\
+        &         &      &            & Global nödfrekvens 14 300                \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 17 m, 18\,068--18\,168 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+18\,068 & 18\,095 & 200  & CW         & CW exklusivt. QRP 18\,086             \\ \hline
+18\,095 & 18\,109 & 500  & Smalband   & Digimoder PSK 18\,100,150             \\
+        &         &      &            & Automatiska Digimoder 18\,105-–109 \\ \hline
+18\,109 & 18\,111 & 200  & Fyrar      & Exklusivt fyrar, IBP fyrnät           \\ \hline
+18\,111 & 18\,168 & 2700 & Alla moder & Digi 18\,111–-120                   \\
+        &         &      &            & SSB QRP 18\,130, DV 18\,150           \\
+        &         &      &            & Global nödfrekv. 18\,160              \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 15\,m, 21\,000--21\,450 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+
+21\,000 & 21\,070 & 200  & CW         & Exklusivt CW, QRS 21\,055, CW QRP 21\,060           \\ \hline
+21\,070 & 21\,110 & 500  & Smalband   & PSK 21\,080.150, Automatiska Digimoder 21\,090–-110 \\
+21\,110 & 21\,120 & 2700 & Alla moder & Alla moder utom SSB!                                \\
+        &         &      &            & Digimoder, och Automatiska Digimoder                \\ \hline
+21\,120 & 21\,149 & 500  & Smalband   &                                                     \\ \hline
+21\,149 & 21\,151 & 200  & Fyrar      & Exklusivt fyrar. IBP fyrnät                         \\ \hline
+21\,151 & 21\,450 & 2700 & Alla moder & DV 21\,180, SSB QRP 21\,285, Image 21\,340          \\
+        &         &      &            & Global nödfrekv. 21\,360                            \\ \hline
+\end{tabular}
+
+\subsubsection{Bandplan 12\,m, 24\,890--24\,990 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+24\,890 & 24\,915 & 200  & CW         & Exklusivt CW, QRP 24\,906                             \\ \hline
+24\,915 & 24\,929 & 500  & Smalband   & PSK 24\,920,150, Automatiska Digimoder 24\,925–-929 \\ \hline
+24\,929 & 24\,931 & 200  & Fyrar      & Fyrar, IBP fyrnät                                    \\ \hline
+24\,931 & 24\,990 & 2700 & Alla moder & Auto Digimoder 24\,931-–940                        \\
+       &        &      &            & SSB QRP 24\,950, DV 24,960                            \\ \hline
+\end{tabular}
+
+\small
+\subsubsection{Bandplan 10\,m, 28\,000-29\,700 kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+28\,000 & 28\,070 & 200  & CW         & Exklusivt CW, QRS 28\,055, CW QRP 28\,060              \\ \hline
+28\,070 & 28\,190 & 500  & Smalband   & PSK 28 120,150, Auto Digimoder inom 28\,120--150       \\ \hline
+28\,190 & 28\,199 & 200  & Fyrar IBP  & Regionala fyrar med tidsdelning                        \\ \hline
+28\,199 & 28\,201 & 200  & Fyrar IBP  & IBP fyrnät                                             \\ \hline
+28\,201 & 28\,225 & 200  & Fyrar IBP  & kontinuerligt sändande fyrar                           \\ \hline
+28\,225 & 28\,300 & 2700 & Alla moder & Övriga fyrar                                           \\ \hline
+28\,300 & 28\,320 & 2700 & Alla moder & Digimoder och Automatiska Digimoder                    \\ \hline
+28\,320 & 29\,100 & 2700 & Alla moder & DV 28\,330 kHz, SSB QRP 28\,360 kHz                    \\
+        &         &      &            & Image 28\,680 kHz                                      \\ \hline
+29\,100 & 29\,200 & 6000 & Alla moder & FM simplex, 10\,kHz kanaler                            \\
+        &         &      &            & Maximalt ±2,5 kHz dev., max 2,5\,kHz mod.frek.         \\ \hline
+29\,200 & 29\,300 & 6000 & Alla moder & Digimoder och Automatiska Digimoder                    \\ \hline
+29\,300 & 29\,510 & 6000 & Satellit   & Nerlänk fr. satellit. EJ SÄNDNING I SEGMENTET          \\ \hline
+29\,510 & 29\,520 & 6000 & Skydd      & Skyddsfrekvens för satelliter. EJ SÄNDNING I SEGMENTET \\ \hline
+29\,520 & 29\,590 & 6000 & Alla moder & FM Repeater in RH1--8, 100\,kHz duplex, 2.5\,kHz NBFM  \\ \hline
+29\,600 & 29\,620 & 6000 & Alla moder & FM simplex, anrop 29\,600                              \\
+        &         &      &            & FM simplex repeater 29\,610                            \\ \hline
+29\,620 & 29\,700 & 6000 & Alla moder & FM Repeater ut RH1--8, 100\,kHz duplex                 \\ \hline
+\end{tabular}
+%\end{landscape}
+\normalsize
+
+\clearpage
+
